Adição da galeria de imagens

--- a/index.html
+++ b/index.html
@@ -42,9 +42,17 @@
   </section>
 
   <section>
-    <div class="games">
+    <div class="trendingGames">
       <h3 class="sectionGames poppins-bold">Currently Trending Games</h3>
       <button class="btnGames poppins-medium">SEE ALL</button>
+    </div>
+    <div class="gallery">
+      <div class="games">
+        <img src="images/section2/game1.png">
+        <img src="images/section2/game2.png">
+        <img src="images/section2/game3.png">
+        <img src="images/section2/game4.png">
+      </div>
     </div>
   </section>
 
