--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.typekit.net/fdv6jmo.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -52,6 +53,24 @@
         <img src="images/section2/game2.png">
         <img src="images/section2/game3.png">
         <img src="images/section2/game4.png">
+      </div>
+      <div class="followers">
+        <div class="game1 rubik-medium">
+          <img src="images/section2/fire.png" alt="A fire icon">
+          <p> 40 Followers</p>
+        </div>
+        <div class="game2 rubik-medium">
+          <img src="images/section2/fire.png" alt="A fire icon">
+          <p> 40 Followers</p>
+        </div>
+        <div class="game3 rubik-medium">
+          <img src="images/section2/fire.png" alt="A fire icon">
+          <p> 40 Followers</p>
+        </div>
+        <div class="game4 rubik-medium">
+          <img src="images/section2/fire.png" alt="A fire icon">
+          <p> 40 Followers</p>
+        </div>
       </div>
     </div>
   </section>
