Seção Development completa e alguns outros ajustes geral no código

--- a/index.html
+++ b/index.html
@@ -90,6 +90,45 @@
         <img class="dots" src="images/section3/dots.png">
       </div>
     </section>
+
+    <section class="developmentSection">
+      <div class="text">
+        <h2 class="poppins-bold">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+        <p class="textDevelopment poppins-regular">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+      </div>
+      <div class="galery poppins-medium">
+        <div class="card">
+          <img src="images/section4/icons/mobile.png">
+          <p>Mobile Game Development</p>
+          <img src="images/section4/icons/arrow.png">
+        </div>
+        <div class="card">
+          <img src="images/section4/icons/pc.png">
+          <p>PC Game Development</p>
+          <img src="images/section4/icons/arrow.png">
+        </div>
+        <div class="card">
+          <img src="images/section4/icons/ps4.png">
+          <p>PS4 Game Development</p>
+          <img src="images/section4/icons/arrow.png">
+        </div>
+        <div class="card">
+          <img src="images/section4/icons/vrSolutions.png">
+          <p>AR/VR Solutions</p>
+          <img src="images/section4/icons/arrow.png">
+        </div>
+        <div class="card">
+          <img src="images/section4/icons/vrDesign.png">
+          <p>AR/VR Design</p>
+          <img src="images/section4/icons/arrow.png">
+        </div>
+        <div class="card">
+          <img src="images/section4/icons/3d.png">
+          <p>3D Modelings</p>
+          <img src="images/section4/icons/arrow.png">
+        </div>
+      </div>
+    </section>
   </main>
   <script src="main.js"></script>
 </body>
