--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Desafio 1</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/fdv6jmo.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -126,6 +126,43 @@
           <img src="images/section4/icons/3d.png">
           <p>3D Modelings</p>
           <img src="images/section4/icons/arrow.png">
+        </div>
+      </div>
+    </section>
+    <section class="projectsSection">
+      <div class="textContent">
+        <h2 class="poppins-bold">Our Recent Projects</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+      </div>
+      <div class="gridGallery">
+        <img src="images/section5/image1.png">
+        <img src="images/section5/image2.png">
+        <img src="images/section5/image3.png">
+        <img src="images/section5/image4.png">
+        <img src="images/section5/image5.png">
+        <img src="images/section5/image6.png">
+
+      </div>
+      <div>
+        <button class="btnProjects rubik-medium"> SEE ALL</button>
+      </div>
+    </section>
+    <section class="newsEmail">
+      <div class="text">
+        <h2 class="title poppins-semibold">Lorem Ipsum</h2>
+        <p class="legend poppins-regular">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+      </div>
+      <div class="emailContainer">
+        <div class="text">
+          <h2 class="poppins-medium">Stay in the Loop</h2>
+          <p class="poppins-regular">Subscribe to receive the latest news and updates about TDA.</p>
+          <p>We promise not to spam you! </p>
+        </div>
+        <div>
+          <div class="emailAdress">
+            <input placeholder="Enter email address" id="emailInput" class="poppins-light">
+            <button class="btnEmail">Continue</button>
+          </div>
         </div>
       </div>
     </section>
