--- a/index.html
+++ b/index.html
@@ -170,4 +170,40 @@
   <script src="main.js"></script>
 </body>
 
+<footer>
+  <div class="upFooter">
+    <div class="logo">
+      <h2 class="poppins-extrabold">LOGO</h2>
+      <p class="poppins-regular">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+      <p class="atSign poppins-regular">@Logo</p>
+    </div>
+    <div class="about">
+      <h3 class="poppins-medium">About us</h3>
+      <ul class="poppins-regular">
+        <li>Zeux</li>
+        <li>Portfolio</li>
+        <li>Careers</li>
+        <li>Contact us</li>
+      </ul>
+    </div>
+    <div class="contact">
+      <h3 class="poppins-medium">Contact Us</h3>
+      <ul class="poppins-regular">
+        <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </li>
+        <li>+908 89097 890</li>
+      </ul>
+    </div>
+    <div class="socialIcons">
+      <img src="images/footer/facebook.png">
+      <img src="images/footer/ig.png">
+      <img src="images/footer/x.png">
+      <img src="images/footer/linkedin.png">
+    </div>
+  </div>
+  <hr class="line">
+  <div>
+    <p class="copyright poppins-regular">Copyright ® 2022 prodesigner All rights Reserved</p>
+  </div>
+</footer>
+
 </html>
