Correção do Gap
Precisei retirar o gap da main para que o background da section 5 não fosse afetado

--- a/index.html
+++ b/index.html
@@ -129,43 +129,46 @@
         </div>
       </div>
     </section>
-    <section class="projectsSection">
-      <div class="textContent">
-        <h2 class="poppins-bold">Our Recent Projects</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      </div>
-      <div class="gridGallery">
-        <img src="images/section5/image1.png">
-        <img src="images/section5/image2.png">
-        <img src="images/section5/image3.png">
-        <img src="images/section5/image4.png">
-        <img src="images/section5/image5.png">
-        <img src="images/section5/image6.png">
+    <div class="differentBackground">
+      <section class="projectsSection">
+        <div class="textContent">
+          <h2 class="poppins-bold">Our Recent Projects</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="gridGallery">
+          <img src="images/section5/image1.png">
+          <img src="images/section5/image2.png">
+          <img src="images/section5/image3.png">
+          <img src="images/section5/image4.png">
+          <img src="images/section5/image5.png">
+          <img src="images/section5/image6.png">
 
-      </div>
-      <div>
-        <button class="btnProjects rubik-medium"> SEE ALL</button>
-      </div>
-    </section>
-    <section class="newsEmail">
-      <div class="text">
-        <h2 class="title poppins-semibold">Lorem Ipsum</h2>
-        <p class="legend poppins-regular">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      </div>
-      <div class="emailContainer">
-        <div class="text">
-          <h2 class="poppins-medium">Stay in the Loop</h2>
-          <p class="poppins-regular">Subscribe to receive the latest news and updates about TDA.</p>
-          <p>We promise not to spam you! </p>
         </div>
         <div>
-          <div class="emailAdress">
-            <input placeholder="Enter email address" id="emailInput" class="poppins-light">
-            <button class="btnEmail">Continue</button>
+          <button class="btnProjects rubik-medium"> SEE ALL</button>
+        </div>
+
+      </section>
+      <section class="newsEmail">
+        <div class="text">
+          <h2 class="title poppins-semibold">Lorem Ipsum</h2>
+          <p class="legend poppins-regular">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="emailContainer">
+          <div class="text">
+            <h2 class="poppins-medium">Stay in the Loop</h2>
+            <p class="poppins-regular">Subscribe to receive the latest news and updates about TDA.</p>
+            <p>We promise not to spam you! </p>
+          </div>
+          <div>
+            <div class="emailAdress">
+              <input placeholder="Enter email address" id="emailInput" class="poppins-light">
+              <button class="btnEmail">Continue</button>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </main>
   <script src="main.js"></script>
 </body>
