correção do controle, botão do envio do email e responsividade do header

--- a/index.html
+++ b/index.html
@@ -34,12 +34,7 @@
         <p class="legend1 poppins-medium">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
         <button class="btnDetails poppins-medium">Get more details</button>
       </div>
-      <div class="images">
-        <img src="images/section1/unity.png" alt="unity logo" class="unity">
-        <img src="images/section1/cry.png" alt="cry logo" class="cry">
-        <img src="images/section1/unreal.png" alt="unreal logo" class="unreal">
-        <img src="images/section1/joy_stick.png" alt="A white joystick" class="joystick">
-      </div>
+      <img src="images/mainPage/section1/joystick.png" class="joystick">
     </section>
 
     <section class="gameSection">
@@ -49,30 +44,30 @@
       </div>
       <div class="galery">
         <div class="card">
-          <img src="images/section2/game1.png">
+          <img src="images/mainPage/section2/game1.png">
           <div class="gameTitle rubik-medium">
-            <img src="images/section2/fire.png" alt="A fire icon">
+            <img src="images/mainPage/section2/fire.png" alt="A fire icon">
             <p> 40 Followers</p>
           </div>
         </div>
         <div class="card">
-          <img src="images/section2/game2.png">
+          <img src="images/mainPage/section2/game2.png">
           <div class="gameTitle rubik-medium">
-            <img src="images/section2/fire.png" alt="A fire icon">
+            <img src="images/mainPage/section2/fire.png" alt="A fire icon">
             <p> 40 Followers</p>
           </div>
         </div>
         <div class="card">
-          <img src="images/section2/game3.png">
+          <img src="images/mainPage/section2/game3.png">
           <div class="gameTitle rubik-medium">
-            <img src="images/section2/fire.png" alt="A fire icon">
+            <img src="images/mainPage/section2/fire.png" alt="A fire icon">
             <p> 40 Followers</p>
           </div>
         </div>
         <div class="card">
-          <img src="images/section2/game4.png">
+          <img src="images/mainPage/section2/game4.png">
           <div class="gameTitle rubik-medium">
-            <img src="images/section2/fire.png" alt="A fire icon">
+            <img src="images/mainPage/section2/fire.png" alt="A fire icon">
             <p> 40 Followers</p>
           </div>
         </div>
@@ -86,8 +81,8 @@
         <p class="text2 poppins-regular">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
       </div>
       <div class="imageContent">
-        <img class="spiderImage" src="images/section3/spiderman.png">
-        <img class="dots" src="images/section3/dots.png">
+        <img class="spiderImage" src="images/mainPage/section3/spiderman.png">
+        <img class="dots" src="images/mainPage/section3/dots.png">
       </div>
     </section>
 
@@ -98,34 +93,34 @@
       </div>
       <div class="galery poppins-medium">
         <div class="card">
-          <img src="images/section4/icons/mobile.png">
+          <img src="images/mainPage/section4/icons/mobile.png">
           <p>Mobile Game Development</p>
-          <img src="images/section4/icons/arrow.png">
+          <img src="images/mainPage/section4/icons/arrow.png">
         </div>
         <div class="card">
-          <img src="images/section4/icons/pc.png">
+          <img src="images/mainPage/section4/icons/pc.png">
           <p>PC Game Development</p>
-          <img src="images/section4/icons/arrow.png">
+          <img src="images/mainPage/section4/icons/arrow.png">
         </div>
         <div class="card">
-          <img src="images/section4/icons/ps4.png">
+          <img src="images/mainPage/section4/icons/ps4.png">
           <p>PS4 Game Development</p>
-          <img src="images/section4/icons/arrow.png">
+          <img src="images/mainPage/section4/icons/arrow.png">
         </div>
         <div class="card">
-          <img src="images/section4/icons/vrSolutions.png">
+          <img src="images/mainPage/section4/icons/vrSolutions.png">
           <p>AR/VR Solutions</p>
-          <img src="images/section4/icons/arrow.png">
+          <img src="images/mainPage/section4/icons/arrow.png">
         </div>
         <div class="card">
-          <img src="images/section4/icons/vrDesign.png">
+          <img src="images/mainPage/section4/icons/vrDesign.png">
           <p>AR/VR Design</p>
-          <img src="images/section4/icons/arrow.png">
+          <img src="images/mainPage/section4/icons/arrow.png">
         </div>
         <div class="card">
-          <img src="images/section4/icons/3d.png">
+          <img src="images/mainPage/section4/icons/3d.png">
           <p>3D Modelings</p>
-          <img src="images/section4/icons/arrow.png">
+          <img src="images/mainPage/section4/icons/arrow.png">
         </div>
       </div>
     </section>
@@ -136,12 +131,12 @@
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
         <div class="gridGallery">
-          <img src="images/section5/image1.png">
-          <img src="images/section5/image2.png">
-          <img src="images/section5/image3.png">
-          <img src="images/section5/image4.png">
-          <img src="images/section5/image5.png">
-          <img src="images/section5/image6.png">
+          <img src="images/mainPage/section5/image1.png">
+          <img src="images/mainPage/section5/image2.png">
+          <img src="images/mainPage/section5/image3.png">
+          <img src="images/mainPage/section5/image4.png">
+          <img src="images/mainPage/section5/image5.png">
+          <img src="images/mainPage/section5/image6.png">
 
         </div>
         <div>
@@ -170,43 +165,44 @@
       </section>
     </div>
   </main>
+
+  <footer>
+    <div class="upFooter">
+      <div class="logo">
+        <h2 class="poppins-extrabold">LOGO</h2>
+        <p class="poppins-regular">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <p class="atSign poppins-regular">@Logo</p>
+      </div>
+      <div class="about">
+        <h3 class="poppins-medium">About us</h3>
+        <ul class="poppins-regular">
+          <li>Zeux</li>
+          <li>Portfolio</li>
+          <li>Careers</li>
+          <li>Contact us</li>
+        </ul>
+      </div>
+      <div class="contact">
+        <h3 class="poppins-medium">Contact Us</h3>
+        <ul class="poppins-regular">
+          <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </li>
+          <li>+908 89097 890</li>
+        </ul>
+      </div>
+      <div class="socialIcons">
+        <img src="images/footer/facebook.png">
+        <img src="images/footer/ig.png">
+        <img src="images/footer/x.png">
+        <img src="images/footer/linkedin.png">
+      </div>
+    </div>
+    <hr class="line">
+    <div>
+      <p class="copyright poppins-regular">Copyright ® 2022 prodesigner All rights Reserved</p>
+    </div>
+  </footer>
+
   <script src="main.js"></script>
 </body>
-
-<footer>
-  <div class="upFooter">
-    <div class="logo">
-      <h2 class="poppins-extrabold">LOGO</h2>
-      <p class="poppins-regular">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      <p class="atSign poppins-regular">@Logo</p>
-    </div>
-    <div class="about">
-      <h3 class="poppins-medium">About us</h3>
-      <ul class="poppins-regular">
-        <li>Zeux</li>
-        <li>Portfolio</li>
-        <li>Careers</li>
-        <li>Contact us</li>
-      </ul>
-    </div>
-    <div class="contact">
-      <h3 class="poppins-medium">Contact Us</h3>
-      <ul class="poppins-regular">
-        <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </li>
-        <li>+908 89097 890</li>
-      </ul>
-    </div>
-    <div class="socialIcons">
-      <img src="images/footer/facebook.png">
-      <img src="images/footer/ig.png">
-      <img src="images/footer/x.png">
-      <img src="images/footer/linkedin.png">
-    </div>
-  </div>
-  <hr class="line">
-  <div>
-    <p class="copyright poppins-regular">Copyright ® 2022 prodesigner All rights Reserved</p>
-  </div>
-</footer>
 
 </html>
