adição da pagina de contact

--- a/pages/contactUs/contactUs.html
+++ b/pages/contactUs/contactUs.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/fdv6jmo.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styleContact.css">
 </head>
 
 <body>
@@ -27,6 +27,10 @@
     </div>
   </header>
   <main>
+
+    <p>Home ></p>
+    <p>Contac Us</p>
+
 
   </main>
 
@@ -54,10 +58,10 @@
         </ul>
       </div>
       <div class="socialIcons">
-        <img src="images/footer/facebook.png">
-        <img src="images/footer/ig.png">
-        <img src="images/footer/x.png">
-        <img src="images/footer/linkedin.png">
+        <img src="/images/footer/facebook.png">
+        <img src="/images/footer/ig.png">
+        <img src="/images/footer/x.png">
+        <img src="/images/footer/linkedin.png">
       </div>
     </div>
     <hr class="line">
