alteração no README e adição e imagens e da seção Mapa da pagina Contact Us

--- a/pages/contactUs/contactUs.html
+++ b/pages/contactUs/contactUs.html
@@ -27,11 +27,50 @@
     </div>
   </header>
   <main>
+    <section class="mapSection">
+      <div class="poppins-regular">
+        <p>Home ></p>
+        <p> Contac Us</p>
+      </div>
+      <div>
+        <img src="/images/pageContact/dot.png" alt="">
+        <h2 class="poppins-semibold">Lorem Ipsum is simply dummy text of the printing and.</h2>
+        <p class="poppins-medium">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+      </div>
+      <img src="/images/pageContact/Huge Global.png" alt="global map">
+      <div>
 
-    <p>Home ></p>
-    <p>Contac Us</p>
-
-
+      </div>
+    </section>
+    <section class="form">
+      <div>
+        <div>
+          <p class="poppins-regular">Follow Us</p>
+        </div>
+        <div>
+          <img src="/images/pageContact/followUs/facebook.png">
+          <img src="/images/pageContact/followUs/instagram.png">
+          <img src="/images/pageContact/followUs/x.png">
+          <img src="/images/pageContact/followUs/linkedin.png">
+        </div>
+      </div>
+      <div>
+        <div>
+          <img src="/images/pageContact/phone.png">
+        </div>
+        <div>
+          <p class="poppins-light">+94 4444 5555 6</p>
+        </div>
+      </div>
+      <div>
+        <div>
+          <img src="/images/pageContact/location.png">
+        </div>
+        <div>
+          <p class="poppins-light">but also the leap into electronic typesetting</p>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
