conclusão da pagina contact us e validação dos campos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
   <header id="header">
-    <h1 class="logo poppins-extrabold">LOGO</h1>
+    <a class="logo" href="/">
+      <h1 class="logo poppins-extrabold">LOGO</h1>
+    </a>
     <div>
       <ul class="headerOptions poppins-regular">
         <div class="underBar"></div>
@@ -23,7 +25,7 @@
         <li>Portfolio</li>
         <li>News</li>
       </ul>
-      <button class="contactUs poppins-regular">Contact Us</button>
+      <a href="./pages/contactUs/contactUs.html"> <button class="contactUs poppins-regular">Contact Us</button></a>
     </div>
   </header>
   <main>
@@ -157,7 +159,7 @@
           </div>
           <div>
             <div class="emailAdress">
-              <input placeholder="Enter email address" id="emailInput" class="poppins-light">
+              <input type="email" placeholder="Enter email address" id="emailInput" class="poppins-light">
               <button class="btnEmail">Continue</button>
             </div>
           </div>
