Adição de links

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div>
       <ul class="headerOptions poppins-regular">
         <div class="underBar"></div>
-        <li>Home</li>
-        <li>About Us</li>
-        <li>Portfolio</li>
-        <li>News</li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/pages/error/error.html">About Us</a></li>
+        <li><a href="/pages/error/error.html">Portfolio</a></li>
+        <li><a href="/pages/error/error.html">News</a></li>
       </ul>
       <a href="./pages/contactUs/contactUs.html"> <button class="contactUs poppins-regular">Contact Us</button></a>
     </div>
@@ -139,13 +139,10 @@
           <img src="images/mainPage/section5/image4.png">
           <img src="images/mainPage/section5/image5.png">
           <img src="images/mainPage/section5/image6.png">
-
         </div>
-        <div>
-          <button class="btnProjects rubik-medium"> SEE ALL</button>
-        </div>
-
+        <button class="btnProjects rubik-medium">SEE ALL</button>
       </section>
+
       <section class="newsEmail">
         <div class="text">
           <h2 class="title poppins-semibold">Lorem Ipsum</h2>
@@ -178,10 +175,18 @@
       <div class="about">
         <h3 class="poppins-medium">About us</h3>
         <ul class="poppins-regular">
-          <li>Zeux</li>
-          <li>Portfolio</li>
-          <li>Careers</li>
-          <li>Contact us</li>
+          <a href="/pages/error/error.html">
+            <li>Zeux</li>
+          </a>
+          <a href="/pages/error/error.html">
+            <li>Portfolio</li>
+          </a>
+          <a href="/pages/error/error.html">
+            <li>Careers</li>
+          </a>
+          <a href="/pages/contactUs/contactUs.html">
+            <li>Contact us</li>
+          </a>
         </ul>
       </div>
       <div class="contact">
@@ -192,10 +197,10 @@
         </ul>
       </div>
       <div class="socialIcons">
-        <img src="images/footer/facebook.png">
-        <img src="images/footer/ig.png">
-        <img src="images/footer/x.png">
-        <img src="images/footer/linkedin.png">
+        <a href="https://www.facebook.com"><img src="images/footer/facebook.png"></a>
+        <a href="https://www.instagram.com"><img src="images/footer/ig.png"></a>
+        <a href="https://twitter.com"><img src="images/footer/x.png"></a>
+        <a href="https://linkedin.com"><img src="images/footer/linkedin.png"></a>
       </div>
     </div>
     <hr class="line">
